--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
-<html class="layout-{{ page.html_class }}">
+<html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+    <title>{{- block "title" . }}{{ .Site.Title }}{{- end }}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:700">
-    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+    {{ $style := resources.Get "style.css" | minify | fingerprint }}
+    <link rel="stylesheet" href="{{ $style.Permalink | relURL }}">
   </head>
   <body>
     <div class="container">
       <h1>
-        <a href="/">{{ site.title }}</a>
-        {% if page.title %}
-        / <span>{{ page.title }}</span>
-        {% endif %}
+        <a href="/">{{ .Site.Title }}</a>
+        {{- if isset .Params "title" }}
+        / <span>{{ .Title }}</span>
+        {{- end }}
       </h1>
-      {{ content }}
+      <main>
+        {{- block "main" . }}{{- end }}
+      </main>
     </div>
   </body>
 </html>
